--- a/GAHW2/nbproject/private/private.properties
+++ b/GAHW2/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+application.args=OneMax.params
 compile.on.save=true
-user.properties.file=C:\\Users\\Chathika\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Josh\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
