--- a/GAHW2/nbproject/private/private.properties
+++ b/GAHW2/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 application.args=hw2.params
 compile.on.save=true
-do.depend=false
+do.depend=true
 do.jar=true
 javac.debug=true
 javadoc.preview=true
