--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/GAHW2Rep/nbproject/private/
+/GAHW2Rep/build/
+/GAHW2Rep/dist/
