--- a/GAHW2/nbproject/private/private.properties
+++ b/GAHW2/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Josh\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Chathika\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
